# waakye

./: .air.masa.toml  .air.waakye.toml  .dockerignore  .dokku-monorepo  .env.example  .gitignore  .revive.toml  Dockerfile  Justfile  LICENSE.md  Makefile  README.md  asaro.Dockerfile  docker-compose.yml  go.mod  go.sum  kilishi.Dockerfile  masa.Dockerfile  package.json  waakye.code-workspace
.do/: app.yaml  waakye-kilishi.yml  waakye-masa.yml
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml
api/aggregator/: aggregator.go  types.go
api/database/: handler.go  models.go
api/routes/: routes.go
asaro/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  fly.toml  gunicorn.conf.py  hop.yml  pyproject.toml  requirements.txt
cmd/masa/: main.go
cmd/waakye/: main.go
config/: config.go
kilishi/: .air.toml  .dockerignore  .env.example  .golangci.yml  Dockerfile  Procfile  fly.toml  go.mod  go.sum  hop.yml  kilishi.Dockerfile  main.go
kilishi/aggregator/: aggregator.go
kilishi/api/: types.go
kilishi/config/: config.go
kilishi/utils/: cache.go  cryptography.go  tracks.go  types.go
masa/: .env.example  Dockerfile  package-lock.json  package.json  serverless.yml
masa/src/: app.js  env.ts  index.js  utils.js
pkg/deezer/: deezer.go  deezer_test.go  types.go  utils.go
pkg/spotify/: spotify.go  spotify_test.go  types.go  utils.go
pkg/ytmusic/: types.go  utils.go  ytmusic.go  ytmusic_test.go
shaki/: .golangci.yml  .goreleaser.yaml  go.mod  go.sum  main.go
src/: app.js  index.ts  utils.js  utils.ts
(+71 files in other folders)
