[project]
name = "flask-ytmusicapi"
version = "0.1.0"
description = "An API wrapper for YTMusicAPI library"
authors = [
    { name = "Isaac Adewumi", email = "ienioladewumi@gmail.com" }
]
dependencies = ["ytmusicapi~=1.0.2", "python-dotenv~=1.0.0", "flask~=2.3.2", "marshmallow~=3.19.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
